<?xml version="1.0" encoding="utf-8"?>
<!-- IMPLEMENTATION_CONTRACT §9. Labels drive the shell top-bar title. -->
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">
    <!-- Home is the graph start so bottom-nav popUpTo works. MainActivity routes first launch to
         splashFragment (popping home) until onboarding is done (DECISIONS D-25). -->

    <fragment
        android:id="@+id/splashFragment"
        android:name="com.example.djremixpro.feature.splash.SplashFragment"
        android:label="@string/brand_name"
        tools:layout="@layout/fragment_splash">
        <action
            android:id="@+id/action_splash_to_onboarding"
            app:destination="@id/onboardingFragment"
            app:popUpTo="@id/splashFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_splash_to_home"
            app:destination="@id/homeFragment"
            app:popUpTo="@id/splashFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/onboardingFragment"
        android:name="com.example.djremixpro.feature.onboarding.OnboardingFragment"
        android:label="@string/brand_name"
        tools:layout="@layout/fragment_onboarding">
        <action
            android:id="@+id/action_onboarding_to_permission"
            app:destination="@id/permissionFragment" />
    </fragment>

    <fragment
        android:id="@+id/permissionFragment"
        android:name="com.example.djremixpro.feature.permission.PermissionFragment"
        android:label="@string/brand_name"
        tools:layout="@layout/fragment_permission">
        <action
            android:id="@+id/action_permission_to_home"
            app:destination="@id/homeFragment"
            app:popUpTo="@id/onboardingFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.djremixpro.feature.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/libraryFragment"
        android:name="com.example.djremixpro.feature.library.LibraryFragment"
        android:label="@string/title_library"
        tools:layout="@layout/fragment_library" />

    <fragment
        android:id="@+id/recordingsFragment"
        android:name="com.example.djremixpro.feature.recordings.RecordingsFragment"
        android:label="@string/title_recordings"
        tools:layout="@layout/fragment_recordings" />

    <fragment
        android:id="@+id/learnFragment"
        android:name="com.example.djremixpro.feature.learn.LearnFragment"
        android:label="@string/title_learn"
        tools:layout="@layout/fragment_learn">
        <argument
            android:name="segment"
            android:defaultValue="GUIDE"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.djremixpro.feature.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings">
        <action
            android:id="@+id/action_settings_to_language"
            app:destination="@id/languageFragment" />
    </fragment>

    <fragment
        android:id="@+id/languageFragment"
        android:name="com.example.djremixpro.feature.language.LanguageFragment"
        android:label="@string/title_language"
        tools:layout="@layout/fragment_language" />

    <activity
        android:id="@+id/mixerActivity"
        android:name="com.example.djremixpro.feature.mixer.MixerActivity"
        android:label="@string/brand_name"
        tools:layout="@layout/activity_mixer">
        <argument
            android:name="entry"
            android:defaultValue="DEFAULT"
            app:argType="string" />
        <argument
            android:name="lessonId"
            android:defaultValue="-1"
            app:argType="integer" />
    </activity>

    <action
        android:id="@+id/action_global_settings"
        app:destination="@id/settingsFragment" />
    <action
        android:id="@+id/action_global_mixer"
        app:destination="@id/mixerActivity" />
</navigation>
