<?xml version="1.0" encoding="utf-8"?>
<!-- S8 Settings (App:191-212, #4e): theme segmented, then groups of value / switch rows. -->
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_booth"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="@dimen/screen_padding_h"
        android:paddingTop="@dimen/space_4"
        android:paddingEnd="@dimen/screen_padding_h"
        android:paddingBottom="@dimen/space_24">

        <TextView
            android:textAlignment="viewStart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:accessibilityHeading="true"
            android:text="@string/settings_appearance"
            android:textAppearance="@style/TextAppearance.MixDeck.Caption.Semibold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_8"
            android:background="@drawable/bg_panel_r12"
            android:orientation="horizontal"
            android:padding="3dp">

            <TextView
                android:id="@+id/segment_dark"
                android:layout_width="0dp"
                android:layout_height="@dimen/segment_height_settings"
                
                android:layout_weight="1"
                android:background="@drawable/sel_segment"
                android:gravity="center"
                android:maxLines="1"
                android:ellipsize="end"
                android:paddingStart="@dimen/space_4"
                android:paddingEnd="@dimen/space_4"
                android:text="@string/theme_dark"
                android:textAppearance="@style/TextAppearance.MixDeck.Body.Medium"
                android:textColor="@color/sel_segment_text" />

            <TextView
                android:id="@+id/segment_light"
                android:layout_width="0dp"
                android:layout_height="@dimen/segment_height_settings"
                android:layout_marginStart="@dimen/space_4"
                android:layout_weight="1"
                android:background="@drawable/sel_segment"
                android:gravity="center"
                android:maxLines="1"
                android:ellipsize="end"
                android:paddingStart="@dimen/space_4"
                android:paddingEnd="@dimen/space_4"
                android:text="@string/theme_light"
                android:textAppearance="@style/TextAppearance.MixDeck.Body.Medium"
                android:textColor="@color/sel_segment_text" />

            <TextView
                android:id="@+id/segment_system"
                android:layout_width="0dp"
                android:layout_height="@dimen/segment_height_settings"
                android:layout_marginStart="@dimen/space_4"
                android:layout_weight="1"
                android:background="@drawable/sel_segment"
                android:gravity="center"
                android:maxLines="1"
                android:ellipsize="end"
                android:paddingStart="@dimen/space_4"
                android:paddingEnd="@dimen/space_4"
                android:text="@string/theme_system"
                android:textAppearance="@style/TextAppearance.MixDeck.Body.Medium"
                android:textColor="@color/sel_segment_text" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/section_gap"
            android:orientation="vertical">

        <TextView
            android:textAlignment="viewStart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="@dimen/space_4"
            android:accessibilityHeading="true"
            android:text="@string/settings_group_audio"
            android:textAppearance="@style/TextAppearance.MixDeck.Caption.Semibold" />

        <include
            android:id="@+id/row_latency"
            layout="@layout/item_setting_value" />

        <include
            android:id="@+id/row_precue"
            layout="@layout/item_setting_toggle" />

        <include
            android:id="@+id/row_master_volume"
            layout="@layout/item_setting_value" />

        <TextView
            android:textAlignment="viewStart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/section_gap"
            android:layout_marginBottom="@dimen/space_4"
            android:accessibilityHeading="true"
            android:text="@string/settings_group_recording"
            android:textAppearance="@style/TextAppearance.MixDeck.Caption.Semibold" />

        <include
            android:id="@+id/row_format"
            layout="@layout/item_setting_value" />

        <include
            android:id="@+id/row_quality"
            layout="@layout/item_setting_value" />

        <include
            android:id="@+id/row_folder"
            layout="@layout/item_setting_value" />

        <TextView
            android:textAlignment="viewStart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/section_gap"
            android:layout_marginBottom="@dimen/space_4"
            android:accessibilityHeading="true"
            android:text="@string/settings_group_mixer"
            android:textAppearance="@style/TextAppearance.MixDeck.Caption.Semibold" />

        <include
            android:id="@+id/row_pitch_range"
            layout="@layout/item_setting_value" />

        <include
            android:id="@+id/row_jog_mode"
            layout="@layout/item_setting_value" />

        <include
            android:id="@+id/row_haptic"
            layout="@layout/item_setting_toggle" />

        <include
            android:id="@+id/row_keep_awake"
            layout="@layout/item_setting_toggle" />

        <TextView
            android:textAlignment="viewStart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/section_gap"
            android:layout_marginBottom="@dimen/space_4"
            android:accessibilityHeading="true"
            android:text="@string/settings_group_general"
            android:textAppearance="@style/TextAppearance.MixDeck.Caption.Semibold" />

        <include
            android:id="@+id/row_language"
            layout="@layout/item_setting_value" />

        <include
            android:id="@+id/row_permissions"
            layout="@layout/item_setting_value" />

        <include
            android:id="@+id/row_support"
            layout="@layout/item_setting_value" />
        </LinearLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>
